# cob_eclipse_workspace

./: README.md
.metadata/: version.ini
RosModelsCatalog/: .project  turtlesim_with_teleop.rossystem
RosModelsCatalog/cameras/: cv_camera.ros2  (+2 more)
RosTooling_test_ws/: .project  example_ros1_integration.rossystem  turtlesim_with_teleop.aird  turtlesim_with_teleop.rossystem
cob_combi_robot/: .project  cob_combi_robot.aird  cob_combi_robot_uml.rossystem
cob_combi_sim/: .project  cob_combi_sim.aird  cob_combi_sim.rossystem  cob_combi_sim_uml.aird  cob_combi_sim_uml.rossystem
cob_navi_robot/: .project  cob_navi_robot.aird  cob_navi_robot.rossystem  cob_navi_robot_uml.aird  cob_navi_robot_uml.rossystem  cob_slam_robot.rossystem
cob_navi_sim/: cob_navi_sim.aird  cob_navi_sim.rossystem  cob_slam_sim.aird  cob_slam_sim.rossystem
cob_teleop_robot/: .project  cob_teleop_robot.aird  cob_teleop_robot.rossystem  cob_teleop_robot_uml.aird  cob_teleop_robot_uml.rossystem
cob_teleop_robot/src-gen/cob_teleop_robot/: CMakeLists.txt  README.md  package.xml  setup.py
cob_teleop_robot/src-gen/cob_teleop_robot/config/: ros1_bridges.yaml
cob_teleop_robot/src-gen/cob_teleop_robot/launch/: cob_teleop_robot.launch.py  cob_teleop_robot_bridges.launch.py
cob_teleop_robot/src-gen/cob_teleop_robot/resource/: cob_teleop_robot.puml
cob_teleop_sim/: cob_teleop_bridge.rossystem  cob_teleop_sim_0502.rossystem
com_combi_robot/: cob_combi_robot_rostooling.rossystem  cob_combi_robot_uml.aird  cob_combi_robot_uml.rossystem
com_combi_robot_original/: .project  cob_combi_robot_uml.aird
(+325 files in other folders)
