<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>cob_teleop_robot</name>
 <version>0.0.1</version>
 <description>This package provides launch file for operating cob_teleop_robot</description>
  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>joy</exec_depend>
    <exec_depend>twist_mux</exec_depend>
    <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>ros1_bridge</exec_depend>
  <!--test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>python3-pytest</test_depend-->

  <export>
  	<build_type>ament_python</build_type>
  </export>
</package>
